--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-pr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,10 +19,10 @@
                   border-radius: 15px;
                   width: 20% ;
             }
-            fieldset{
+            .fieldset{
                 border: 3px solid dodgerblue;
             }
-            legend{
+            .legend{
                 border: 1px solid dodgerblue;
                 padding: 10px ;
                 text-align: center;
